attempt fix on mobile parallax image size issue 8

--- a/style.scss
+++ b/style.scss
@@ -113,6 +113,7 @@ body {
   @media (max-width: 415px) {
     background-attachment: scroll;
     background-size: auto;
+    background-position: center;
   }
 }
 
